Provide api to manage MongoDB users with their permissions (#107)
