# mdb/src/main/java/com/onyxdb/mdb/core/clusters/models/MongoPermissionToCreate.java
@@ -1,0 +1,10 @@
+package com.onyxdb.mdb.core.clusters.models;
+
+import java.util.List;
+import java.util.UUID;
+
+public record MongoPermissionToCreate(
+        UUID databaseId,
+        List<MongoRole> roles
+) {
+}
