# mdb/src/main/java/com/onyxdb/mdb/core/clusters/models/UserToCreate.java
@@ -1,0 +1,12 @@
+package com.onyxdb.mdb.core.clusters.models;
+
+import java.util.List;
+import java.util.UUID;
+
+public record UserToCreate(
+        String name,
+        String password,
+        UUID clusterId,
+        List<MongoPermissionToCreate> permissions
+) {
+}
